--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 8000
 NODE_ENV = production
-DB_LOCAL_URI=mongodb://localhost:27017/jvlcart
+DB_LOCAL_URI=mongodb+srv://omganesh:12345@ecommerce2025.z9m8j.mongodb.net/?retryWrites=true&w=majority&appName=Ecommerce2025
 JWT_SECRET=F66DB4EC116F3
 JWT_EXPIRES_TIME=7d
 COOKIE_EXPIRES_TIME=7
